kube/deploy/core/db/emqx/app/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: &app emqx-operator-to-replicas
  namespace: *app
spec:
  endpointSelector: &cluster
    matchLabels:
      app.kubernetes.io/name: emqx-operator
  egress:
    # same cluster
    - toEndpoints:
        - matchLabels:
            apps.emqx.io/managed-by: emqx-operator
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: &app emqx-replicas-from-operator
  namespace: *app
spec:
  endpointSelector: &cluster
    matchLabels:
      apps.emqx.io/managed-by: emqx-operator
  egress:
    # same cluster
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: emqx-operator
